# paper__bot

./: .gitignore  Dockerfile  pyproject.toml
mods/: pubsub_subscribe.py
paper__bot/: main.py  web.py
